--- a/index.html
+++ b/index.html
@@ -3,13 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Modern Ecommerce Store</title>
+    <title>InSenci Ecommerce Store</title>
     <link rel="stylesheet" href="styles.css">
     <script src="script.js"></script>
 </head>
 <body>
     <nav class="navbar">
-        <div class="logo">BRAND</div>
+        <div class="logo">
+            <img src="WebsiteImages/Logo.png">
+        </div>
         <ul class="nav-links">
             <li><a href="#home">Home</a></li>
             <li><a href="#shop">Shop</a></li>
@@ -23,24 +25,22 @@
             <div class="product-box">
                 <img src="WebsiteImages/FinalTabDesert2.png" alt="Product 1">
                 <h2>InSenci StoryCraft</h2>
-                <p>$2000</p>
             </div>
             <div class="product-box">
                 <img src="WebsiteImages/FinalHeadDesert2.png" alt="Product 2">
-                <h2>InSenci Halo</h2>
-                <p>$5000</p>
+                <h2>InSenci StoryCraft Halo</h2>
             </div>
         </section>
 
         <!-- Add this section above the existing video-section -->
         <section class="video-section">
             <video id="autoplayVideo" width="100%" height="600" muted loop>
-                <source src="your-video.mp4" type="video/mp4">
+                <source src="MotionPic/InSenciMotionPic.mp4" type="video/mp4">
             </video>
         </section>
 
         <section class="video-section">
-            <iframe width="100%" height="600" src="https://www.youtube.com/embed/YOUR_VIDEO_ID" frameborder="0" allowfullscreen></iframe>
+            <iframe width="100%" height="600" src="https://www.youtube.com/embed/F1js7HjBvOg?si=5xZepN6rqAJtHR2p" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" frameborder="0" allowfullscreen></iframe>
         </section>
     </main>
 </body>
