--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <img src="WebsiteImages/Logo.png">
         </div>
         <ul class="nav-links">
-            <li><a href="#home">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="#shop">Shop</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#cart">Cart</a></li>
