--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         </div>
         <ul class="nav-links">
             <li><a href="index.html">Home</a></li>
-            <li><a href="#shop">Shop</a></li>
-            <li><a href="#about">About</a></li>
+            <li><a href="shop.html">Shop</a></li>
+            <li><a href="about.html">About</a></li>
             <li><a href="#cart">Cart</a></li>
         </ul>
     </nav>
