--- a/shop.html
+++ b/shop.html
@@ -2,9 +2,48 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>InSenci Ecommerce Store</title>
+    <link rel="stylesheet" href="shop.css">
+    <script src="script.js"></script>
 </head>
 <body>
+    <nav class="navbar">
+        <div class="logo">
+            <img src="WebsiteImages/Logo.png" alt="InSenci Logo">
+        </div>
+        <ul class="nav-links">
+            <li><a href="index.html" class="nav-item">Home</a></li>
+            <li><a href="shop.html" class="nav-item">Shop</a></li>
+            <li><a href="about.html" class="nav-item active">About</a></li>
+            <li><a href="#cart" class="nav-item">Cart</a></li>
+        </ul>
+    </nav>
+
+    <header class="shop-header">
+        <h1 class="header-title">Shop</h1>
+        <p class="header-description">Step into the future of storytelling with technology that transforms your
+            imagination.</p>
+    </header>
+
+    <main class="product-section">
+        <div class="product-card">
+            <img src="WebsiteImages/SHOP_FinalHeadband.jpg" alt="Product 1" class="product-image">
+            <h2 class="product-title">InSenci Story Vision Headband</h2>
+            <p class="product-description">Wear the Story Vision Headband to seamlessly transmit your imagination. While you read, the headband connects
+            with the tablet to project your thoughts into vivid scenes.</p>
+            <p class="product-price">$299.99</p>
+            <button class="product-button">Buy Now</button>
+        </div>
+        <div class="product-card">
+            <img src="WebsiteImages/SHOP_FinalTabletPic1.jpg" alt="Product 2" class="product-image">
+            <h2 class="product-title">InSenci Story Vision Tablet</h2>
+            <p class="product-description">Pair this innovative tablet with the Story Vision Headband to bring your imagination to life. See your reading
+            visualized in stunning detail as the tablet projects the stories in your mind.</p>
+            <p class="product-price">$399.99</p>
+            <button class="product-button">Buy Now</button>
+        </div>
+    </main>
 
 </body>
 </html>
