adjusted product names

--- a/shop.html
+++ b/shop.html
@@ -29,16 +29,16 @@
     <main class="product-section">
         <div class="product-card">
             <img src="WebsiteImages/SHOP_FinalHeadband.jpg" alt="Product 1" class="product-image">
-            <h2 class="product-title">InSenci Story Vision Headband</h2>
-            <p class="product-description">Wear the Story Vision Headband to seamlessly transmit your imagination. While you read, the headband connects
+            <h2 class="product-title">InSenci StoryCraft Halo</h2>
+            <p class="product-description">Wear the StoryCraft Halo to seamlessly transmit your imagination. While you read, the headband connects
             with the tablet to project your thoughts into vivid scenes.</p>
             <p class="product-price">$299.99</p>
             <button class="product-button">Buy Now</button>
         </div>
         <div class="product-card">
             <img src="WebsiteImages/SHOP_FinalTabletPic1.jpg" alt="Product 2" class="product-image">
-            <h2 class="product-title">InSenci Story Vision Tablet</h2>
-            <p class="product-description">Pair this innovative tablet with the Story Vision Headband to bring your imagination to life. See your reading
+            <h2 class="product-title">InSenci StoryCraft</h2>
+            <p class="product-description">Pair this innovative tablet with the StoryCraft Halo to bring your imagination to life. See your reading
             visualized in stunning detail as the tablet projects the stories in your mind.</p>
             <p class="product-price">$399.99</p>
             <button class="product-button">Buy Now</button>
