--- a/about.html
+++ b/about.html
@@ -54,7 +54,7 @@
                 <h3 class="subsection-title">Vision</h3>
                 <p class="section-text">
                     To become the most loved and trusted pioneer in immersive storytelling technology, revolutionizing
-                    the way people experience reading
+                    the way people experience reading starting in 2070s
                 </p>
             </div>
         </section>
